--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@ freeglut-3.0.0/* linguist-vendored
 GLFW/* linguist-vendored
 i686-w64-mingw32/* linguist-vendored
 libraries/* linguist-vendored
-glew-2.1.0-win32* linguist-vendored
+glew-2.1.0-win32/* linguist-vendored
