--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 $ cat .gitattributes
 *.c linguist-detectable=true
-*.h linguist-language=C
+*.h linguist-detectable=true
 _OLD/* linguist-vendored
 freeglut-3.0.0/* linguist-vendored
 glew-2.1.0-win32/* linguist-vendored
