--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ SDL2-2.0.12-win32-x64/* linguist-vendored
 sdl2-mingw/* linguist-vendored
 glut.h linguist-vendored
 direntWin.h linguist-vendored
+sdl-nix/* linguist-vendored
